opam-version: "2.0"
name: "serialkit"
synopsis: "Serialization formats toolkit for OCaml"
description: """\
Serialkit provides easy to use OCaml APIs to query, update and
generate data in generic serialization data formats.

The supported data formats are JSON text, s-expressions and TOML.

Serialkit is distributed under the ISC license. It has no dependencies.

Homepage: <https://erratique.ch/software/serialkit>"""
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: "The serialkit programmers"
license: "ISC"
tags: ["codec" "json" "sexp" "toml" "query" "org:erratique"]
homepage: "https://erratique.ch/software/serialkit"
doc: "https://erratique.ch/software/serialkit/doc"
bug-reports: "https://github.com/dbuenzli/serialkit/issues"
depends: ["serialkit" "cmdliner"]
build: ["ocaml" "pkg/pkg.ml" "build" "--dev-pkg" "%{dev}%"]
dev-repo: "git+https://erratique.ch/repos/serialkit.git"
